@@ -18,11 +18,6 @@
   <description>home website</description>
   <url>https://github.com/noahhhx/site</url>
 
-
-  <licenses>
-    <license/>
-  </licenses>
-
   <developers>
     <developer>
       <name>Noah Giles</name>
@@ -39,6 +34,7 @@
 
   <properties>
     <java.version>21</java.version>
+    <docker.image.prefix>noahhhx</docker.image.prefix>
   </properties>
 
   <dependencies>
@@ -123,6 +119,32 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <from>
+            <image>eclipse-temurin:21-jre</image>
+          </from>
+          <to>
+            <image>${docker.image.prefix}/site</image>
+            <tags>
+              <tag>${project.version}</tag>
+              <tag>latest</tag>
+            </tags>
+          </to>
+          <container>
+            <ports>
+              <port>8080</port>
+            </ports>
+            <jvmFlags>
+              <jvmFlag>-XX:+UseZGC</jvmFlag>
+              <jvmFlag>-XX:+ZGenerational</jvmFlag>
+            </jvmFlags>
+          </container>
+        </configuration>
       </plugin>
     </plugins>
   </build>
